traefik/base/middleware-canary.yaml
#
#  Author: Nho Luong
#  Date: 2023-04-13 01:47:40 +0100 (Thu, 13 Apr 2023)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/nholuongut/kubernetes-configs
#
#  License: see accompanying Nho Luong LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn and optionally send me feedback to help steer this or other code I publish
#
#  https://www.linkedin.com/in/nholuong
#

# ============================================================================ #
#                      T r a e f i k   M i d d l e w a r e
# ============================================================================ #

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: NAME  # XXX: Edit
  namespace: NAMESPACE  # XXX: Edit
spec:
  headers:
    customRequestHeaders:
      X-Canary-Header: "knock-knock"
    customResponseHeaders:
      X-Canary-Response-Header: "hello there"
