traefik/base/dashboard-service.yaml
#
#  Author: Nho Luong
#  Date: 2023-04-29 01:04:00 +0100 (Sat, 29 Apr 2023)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/nholuongut/kubernetes-configs
#
#  License: see accompanying Nho Luong LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/in/nholuong
#

# ============================================================================ #
#               T r a e f i k   D a s h b o a r d   S e r v i c e
# ============================================================================ #

# Used to expose metrics to Prometheus or to make it easier to kubectl port-forward:
#
#     kubectl port-forward -n traefik svc/traefik-dashboard 9000:9000
#
# instead of:
#
#     kubectl port-forward -n traefik $(kubectl get pods -n traefik --selector "app.kubernetes.io/name=traefik" --output=name) 9000:9000
#       or
#     kubectl port-forward -n traefik deploy/traefik 9000:9000
#
# Makefile:
#
#     TUNNEL_CMD := kubectl port-forward -n traefik svc/traefik-dashboard 9000:9000
#
#     default: tunnel
#             sleep 2
#             # dashboard requires trailing slash / to work
#             open http://localhost:9000/dashboard/
#
#     tunnel:
#             pkill -f '$(TUNNEL_CMD)' || :
#             $(TUNNEL_CMD) &

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app.kubernetes.io/instance: traefik-traefik  # doubled up because of helm kustomize name
    app.kubernetes.io/name: traefik-dashboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      #targetPort: traefik  # Traefik doesn't determine the port this way
