traefik/base/dashboard-ingress.yaml
#
#  Author: Nho Luong
#  Date: 2023-04-30 00:56:00 +0100 (Sun, 30 Apr 2023)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/nholuongut/kubernetes-configs
#
#  License: see accompanying Nho Luong LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/in/nholuong
#

# ============================================================================ #
#               T r a e f i k   D a s h b o a r d   I n g r e s s
# ============================================================================ #

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: "true"

    # deprecated, use ingressClassName under spec section for Kubernetes 1.18+
    #kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    #hub.traefik.io/access-control-policy: my-policy  # configured on Traefik Hub: https://hub.traefik.io/acp
    #
    # Middleware rewrites - protect the Dashboard using auth, add /dashboard prefix so that you can just query without adding /dashboard/
    #traefik.ingress.kubernetes.io/router.middlewares: traefik-dashboard-basic-auth@kubernetescrd,traefik-dashboard-add-prefix@kubernetescrd
    traefik.ingress.kubernetes.io/router.middlewares: traefik-dashboard-add-prefix@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    #traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - traefik.DOMAIN.COM  # XXX: Edit
      secretName: traefik-dashboard-tls
  rules:
    - host: traefik.DOMAIN.COM  # XXX: Edit
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
                  #name: traefik  # XXX: Traefik can't pick this up
