traefik/base/dashboard-ingressroute-http-redirect.yaml
#
#  Author: Nho Luong
#  Date: 2023-04-30 02:46:00 +0100 (Sun, 30 Apr 2023)
#
#  vim:ts=2:sts=2:sw=2:et
#
#  https://github.com/nholuongut/kubernetes-configs
#
#  License: see accompanying Nho Luong LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn and optionally send me feedback to help steer this or other code I publish
#
#  https://www.linkedin.com/in/nholuong
#

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host("traefik.DOMAIN.COM")  # XXX: Edit
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: redirect-https
