traefik/base/ingressroute.yaml
#
#  Author: Nho Luong
#  Date: 2023-04-13 01:52:38 +0100 (Thu, 13 Apr 2023)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/nholuongut/kubernetes-configs
#
#  License: see accompanying Nho Luong LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn and optionally send me feedback to help steer this or other code I publish
#
#  https://www.linkedin.com/in/nholuong
#

# ============================================================================ #
#                   T r a e f i k   I n g r e s s   R o u t e
# ============================================================================ #

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: NAME
spec:
  entryPoints:
    - websecure
  routes:
    # See available matchers here:
    #
    #     https://doc.traefik.io/traefik/routing/routers/#rule
    #
    - kind: Rule
      match: Host(`NAME.DOMAIN.COM`) && PathPrefix(`/dashboard`) || PathPrefix(`/api`)  # XXX: Edit
      services:
        # XXX: Edit - pick one
        - kind: TraefikService
          name: api@internal
        - kind: Service
          name: whoamiv1
          namespace: app
          port: 80
        - kind: Service
          name: whoamiv2
          namespace: app
          port: 80
      middlewares:
        - name: default-test-auth@kubernetescrd
  tls:
    certResolver: letsencrypt
    domains:
      - main: www.domain.com  # XXX: Edit
        sans:
          - www2.domain.com  # XXX: Edit
    options:
      name: tlsoptions
